- Zamykanie otwartych połączeń z bazą danych przy opuszczaniu funkcji (tam, gdzie to możliwe), aby oszczędzać pulę połączeń serwera baz danych. - Usunięcie wyświetlania komunikatów generowanych przez funkcje join_...()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,13 @@ Description:
   Pakiet dla wygody Bartka, umozliwiajacy pobieranie wynikow egzaminow 
   i testow zrownujacych z dolaczonymi wszystkimi potrzebnymi zmiennymi
   kontekstowymi.
-Version: 0.0.1
+Version: 0.0.2
 Author: Mateusz Zoltak <zozlak@zozlak.org>
 Maintainer: Mateusz Zoltak <zozlak@zozlak.org>
 Depends: 
   ZPD (>= 1.1.4)
+Imports:
+  DBI
 Suggests: 
   knitr, 
   testthat
