--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,15 @@ Description:
   Pakiet dla wygody Bartka, umozliwiajacy pobieranie wynikow egzaminow 
   i testow zrownujacych z dolaczonymi wszystkimi potrzebnymi zmiennymi
   kontekstowymi.
-Version: 0.0.5
+Version: 0.0.6
 Author: Mateusz Zoltak <zozlak@zozlak.org>
 Maintainer: Mateusz Zoltak <zozlak@zozlak.org>
 Depends: 
-  ZPD (>= 1.1.4)
+  R
 Imports:
-  DBI
+  ZPD (>= 1.1.7)
+  DBI,
+  dplyr
 Suggests: 
   knitr, 
   testthat
